--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:hint="E-mail"
         android:textSize="20sp"
-        android:textColorHint="#FFFF47F9"
+        android:textColorHint="#000000"
         app:layout_constraintTop_toBottomOf="@+id/text_signup"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:textSize="20sp"
-        android:textColorHint="#FFFF47F9"
+        android:textColorHint="#000000"
         app:layout_constraintTop_toBottomOf="@+id/signup_email"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:hint="Fullname"
         android:textSize="20sp"
-        android:textColorHint="#FFFF47F9"
+        android:textColorHint="#000000"
         app:layout_constraintTop_toBottomOf="@+id/signup_password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,43 +73,57 @@
         android:text="Sign Up"
         android:textSize="30sp"
         android:textAllCaps="false"
-        android:backgroundTint="#FF3D3D"
+        app:backgroundTint="#FF3D3D"
         app:layout_constraintTop_toBottomOf="@+id/fullname"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.2"/>
+        app:layout_constraintVertical_bias="0.2"
+        style="@style/AppTheme.RoundedCornerMaterialButton"
+        />
 
     <TextView
         android:id="@+id/text_already_have_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already have an account?"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:textColor="#000000"
         app:layout_constraintTop_toBottomOf="@+id/signup_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintVertical_bias="0.2"
-        app:layout_constraintHorizontal_bias="0.35"/>
+        app:layout_constraintHorizontal_bias="0.25"/>
 
     <TextView
         android:id="@+id/text_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Log in"
-        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textSize="25sp"
         android:textColor="#FF0000"
         app:layout_constraintTop_toBottomOf="@+id/signup_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/text_already_have_account"
         app:layout_constraintVertical_bias="0.2"
-        app:layout_constraintHorizontal_bias="0.85"
+        app:layout_constraintHorizontal_bias="0.2"
         android:clickable="true"
         android:focusable="true"
         />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_login"
+        app:layout_constraintVertical_bias="0.4" />
 
 
 
