Now there is no problem during login also rese password is made available

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -19,14 +19,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"
+        app:layout_constraintVertical_bias="0.2"
         />
 
     <TextView
         android:id="@+id/text_forgot_pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You will be sent an email !!"
+        android:text="Enter your email"
         android:textSize="25sp"
         android:textStyle="bold"
         android:textColor="#000000"
@@ -37,20 +37,56 @@
         app:layout_constraintVertical_bias="0.1"
         />
 
-    <TextView
-        android:id="@+id/forgot_pass_click"
+
+    <EditText
+        android:id="@+id/text_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Click Here"
+        android:hint="E-mail"
         android:textSize="30sp"
-        android:textStyle="bold"
-        android:textColor="#FF0000"
+        android:textColor="@color/black"
+        android:inputType="textEmailAddress"
+        android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_forgot_pass"
         app:layout_constraintVertical_bias="0.1"
+        android:ems="12"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:padding="10dp"
         />
+
+    <Button
+        android:id="@+id/reset_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset Password"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textAllCaps="false"
+        app:backgroundTint="@color/colorAccentPink"
+        style="@style/AppTheme.RoundedCornerMaterialButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_email"
+        app:layout_constraintVertical_bias="0.2"
+        />
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reset_button"
+        app:layout_constraintVertical_bias="0.5"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
