Added login btn in forgot Activity

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:text="Reset Password"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:textAllCaps="false"
         app:backgroundTint="@color/colorAccentPink"
         style="@style/AppTheme.RoundedCornerMaterialButton"
@@ -73,6 +73,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_email"
         app:layout_constraintVertical_bias="0.2"
+        />
+    <TextView
+        android:id="@+id/text_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log in"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reset_button"
+        app:layout_constraintVertical_bias="0.2"
+        android:clickable="true"
+        android:focusable="true"
         />
 
     <ProgressBar
