--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/home"
+        android:layout_marginStart="10dp"
         android:clickable="true"
         android:focusable="true"/>
 
@@ -69,7 +70,7 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_marginTop="40dp"
-        android:layout_marginStart="-52dp"
+        android:layout_marginStart="-55dp"
         android:clickable="true"
         android:focusable="true"/>
 
@@ -97,9 +98,12 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/sell"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="5dp"
         android:clickable="true"
-        android:focusable="true"/>
+        android:focusable="true"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -109,9 +113,12 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_marginTop="40dp"
-        android:layout_marginStart="-52dp"
+        android:layout_marginStart="-37dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginLeft="5dp"
         android:clickable="true"
-        android:focusable="true"/>
+        android:focusable="true"
+        android:layout_marginRight="5dp"/>
 
 
 </LinearLayout>
