--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -53,6 +53,37 @@
             android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/header"
+        app:layout_constraintStart_toStartOf="parent"
+        >
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:queryHint="Search for items..." />
+
+        <ListView
+            android:id="@+id/list_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/recent_mid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/header"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="50dp">
+
         <TextView
             android:id="@+id/recently_added"
             android:layout_width="wrap_content"
@@ -61,9 +92,7 @@
             android:textSize="30sp"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:layout_marginStart="-390dp"
-            android:layout_marginTop="80dp"
-           />
+            />
     </LinearLayout>
 
 
